--- a/hw09.ipynb
+++ b/hw09.ipynb
@@ -249,9 +249,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4dfa2e34",
+   "metadata": {},
+   "source": [
+    "Code from book_lover_demo.py script for reference\n",
+    "\n",
+    "```bash\n",
+    "from booklover import BookLover\n",
+    "\n",
+    "bl = BookLover('Shawn', 'shawnsfeng@gmail.com', 'Scifi')\n",
+    "bl.add_book('The art of Titanfall', 3)\n",
+    "print(bl.num_books_read())\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dfa2e34",
+   "id": "6b6b103a",
    "metadata": {},
    "outputs": [],
    "source": []
